--- a/index.css
+++ b/index.css
@@ -3,9 +3,15 @@
 	padding: 0;
 }
 
+body {
+    background-color: #ffaa44;
+    padding: 0 10px;
+}
+
 header {
     width: 100%;
     height: 10vh;
+    margin: 0 0 5vh 0;
     background-color: #bbbbff;
     text-align: center;
     color: #000000;
@@ -15,9 +21,12 @@ header {
     margin: 0 auto;
     min-width: 300px;
     max-width: 600px;
-    padding: 10px;
+    padding: 0 10px 0 10px;
+    height: 100vh;
     background-color: #ffbbbb;
-    overflow: hidden;
+    -webkit-box-shadow: 0px 0px 100px 0px rgba(0,0,0,0.3);
+    -moz-box-shadow: 0px 0px 100px 0px rgba(0,0,0,0.3);
+    box-shadow: 0px 0px 100px 0px rgba(0,0,0,0.3);
 }
 
 #bottom_button {
